src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>All_Traffic_Sources__c</fullName>
        <label>All Traffic Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID_Formula__c</fullName>
        <formula>gaconnector_Google_Analytics_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Client ID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Promo_Code__c</fullName>
        <description>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</description>
        <inlineHelpText>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</inlineHelpText>
        <label>Original Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Autopilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Autopilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adroll__ClickConversion__c</fullName>
        <description>Conversion Rate For Clicks</description>
        <inlineHelpText>Conversion Rate For Clicks</inlineHelpText>
        <label>Click Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__ClickCosts__c</fullName>
        <description>Costs Incurred for the Clicks</description>
        <inlineHelpText>Costs Incurred for the Clicks</inlineHelpText>
        <label>Contact Click Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Click_Conversion__c</fullName>
        <formula>adroll__ClickConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Click Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Clicks__c</fullName>
        <description>Number of Clicks for the Email Address</description>
        <inlineHelpText>Number of Clicks for the Email Address</inlineHelpText>
        <label>Contact Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__ImpressionCosts__c</fullName>
        <description>Costs Incurred for the Impressions</description>
        <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
        <label>Contact Impression Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions_External_ID__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Impressions External ID mirrors Impressions__c field, this field is only used for data purposes, it should not be added to any page layouts or reports.</description>
        <externalId>true</externalId>
        <label>Impressions External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__Impressions__c</fullName>
        <description>Number of Impressions for the user</description>
        <inlineHelpText>Number of Impressions for the user</inlineHelpText>
        <label>Contact Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adroll__LastAdRollTrackingDate__c</fullName>
        <description>Latest Date of the Tracking Data Occurrence</description>
        <inlineHelpText>Latest Date of the Tracking Data Occurrence</inlineHelpText>
        <label>Contact Last RollWorks Tracking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>adroll__ViewConversion__c</fullName>
        <description>Conversion Rate for Views</description>
        <inlineHelpText>Conversion Rate for Views</inlineHelpText>
        <label>View Conversion (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>adroll__View_Conversion__c</fullName>
        <formula>adroll__ViewConversion__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact View Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Campaign__c</fullName>
        <description>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product. Mapped from the Lead custom field.</description>
        <inlineHelpText>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product. Mapped from the Lead custom field.</inlineHelpText>
        <label>First UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Content__c</fullName>
        <description>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective. Mapped from the lead custom field.</description>
        <inlineHelpText>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
        <label>First UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Medium__c</fullName>
        <description>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter. Mapped from the lead custom field.</description>
        <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter. Mapped from the lead custom field.</inlineHelpText>
        <label>First UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Source__c</fullName>
        <description>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard. Mapped from lead custom field.</description>
        <inlineHelpText>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard. Mapped from lead custom field.</inlineHelpText>
        <label>First UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__GA_Term__c</fullName>
        <description>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword. Mapped from lead custom field.</description>
        <inlineHelpText>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword. Mapped from lead custom field.</inlineHelpText>
        <label>First UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Initial_Source__c</fullName>
        <description>This field tracks the Contact initial referral source from the session history data.</description>
        <label>Initial Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Keyword__c</fullName>
        <description>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
        <inlineHelpText>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
        <label>First Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Keyword__c</fullName>
        <description>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</description>
        <inlineHelpText>The search term that sent a visitor to your web site prior to them submitting a web-to-lead form. &apos;Not Provided&apos; means the keyword cannot be determined, usually due to Google encrypting searches from logged in Google users.</inlineHelpText>
        <label>Last Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Lead_Source_Type__c</fullName>
        <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
        <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
        <label>Last Lead Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Paid_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result.</description>
        <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result.</inlineHelpText>
        <label>Last Paid Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Referrer__c</fullName>
        <description>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
        <inlineHelpText>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
        <label>Last Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_Search_Engine__c</fullName>
        <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
        <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
        <label>Last Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_UTM_Campaign__c</fullName>
        <description>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product. Mapped from the Lead custom field.</description>
        <inlineHelpText>utm_campaign variable from Google Analytics Campaign URLs: The individual campaign name, slogan, promo code, etc. for a product. Mapped from the Lead custom field.</inlineHelpText>
        <label>Last UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_UTM_Content__c</fullName>
        <description>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
        <inlineHelpText>utm_content variable from Google Analytics Campaign URLs: Used to differentiate similar content, or links within the same ad.</inlineHelpText>
        <label>Last UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_UTM_Medium__c</fullName>
        <description>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter. Mapped from the lead custom field.</description>
        <inlineHelpText>utm_medium variable from Google Analytics Campaign URLs: The advertising or marketing medium, e.g.: cpc, banner, email newsletter. Mapped from the lead custom field.</inlineHelpText>
        <label>Last UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_UTM_Source__c</fullName>
        <description>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard. Mapped from lead custom field.</description>
        <inlineHelpText>utm_source variable from Google Analytics Campaign URLs: Identify the advertiser, site, publication, etc. that is sending traffic to your property, e.g. google, citysearch, newsletter4, billboard. Mapped from lead custom field.</inlineHelpText>
        <label>Last UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_UTM_Term__c</fullName>
        <description>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword. Mapped from lead custom field.</description>
        <inlineHelpText>utm_term variable from Google Analytics Campaign URLs: Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword. Mapped from lead custom field.</inlineHelpText>
        <label>Last UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Last_gclid__c</fullName>
        <description>Google Adwords tracking id</description>
        <inlineHelpText>Google Adwords tracking id</inlineHelpText>
        <label>Last gclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__Lead_Source_Type__c</fullName>
        <description>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</description>
        <inlineHelpText>Categorizes the type of source that sent a user to your web site. Campaign=utm tagged URL, Direct=Typed in, Organic=non-ad search, Referral=link from another site.</inlineHelpText>
        <label>First Lead Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cloudamp__Paid_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result.</description>
        <inlineHelpText>If this is checked, it means that the click that sent a visitor to your web site prior to them submitting a web-to-lead form was on an advertisement (Adwords, Microsoft AdCenter, etc.). Unchecked means they clicked on an organic search result.</inlineHelpText>
        <label>First Paid Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudamp__Referrer__c</fullName>
        <description>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</description>
        <inlineHelpText>The Referring URL that a visitor came from to arrive on your web site, prior to submitting a web-to-lead form.</inlineHelpText>
        <label>First Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloudamp__Search_Engine__c</fullName>
        <description>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</description>
        <inlineHelpText>The search engine that a visitor used to find your site, prior to submitting the web-to-lead form.</inlineHelpText>
        <label>First Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudamp__gclid__c</fullName>
        <description>Google Adwords tracking id</description>
        <inlineHelpText>Google Adwords tracking id</inlineHelpText>
        <label>First gclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Campaign__c</fullName>
        <label>First Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Channel__c</fullName>
        <label>First Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Content__c</fullName>
        <label>First Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
        <label>First Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Medium__c</fullName>
        <label>First Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Referrer__c</fullName>
        <label>First Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Source__c</fullName>
        <label>First Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Term__c</fullName>
        <label>First Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
        <label>Google Analytics Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Link__c</fullName>
        <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; gaconnector_Google_Analytics_Client_ID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Analytics Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Campaign__c</fullName>
        <label>Last Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Channel__c</fullName>
        <label>Last Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Content__c</fullName>
        <label>Last Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
        <label>Last Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Medium__c</fullName>
        <label>Last Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Referrer__c</fullName>
        <label>Last Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Source__c</fullName>
        <label>Last Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Term__c</fullName>
        <label>Last Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Latitude_from_IP__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Location_approx__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp;  gaconnector_Latitude_from_IP__c  &amp; &quot;,&quot; &amp; (gaconnector_Longitude__c), &quot;Open in Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (approx.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
        <label>Number of Website Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Pages_visited__c</fullName>
        <label>Pages visited</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
        <label>Time Spent on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
        <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
TEXT(MOD(ROUND(gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Rating__c</fullName>
        <label>Infer: Behavior Score [1-4]</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Score__c</fullName>
        <label>Infer: Behavior Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Behavioral_Updated__c</fullName>
        <label>Infer: Behavior Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infer3__Encoded_Rating__c</fullName>
        <formula>RPAD(&apos;4&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;4&apos;)+RPAD(&apos;3&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&apos;3&apos;)+RPAD(&apos;2&apos;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c,&apos;2&apos;)+RPAD(&apos;1&apos;,101-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c,&apos;1&apos;)</formula>
        <label>Infer Encoded Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Personas__c</fullName>
        <label>Infer: Profiles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Profiles_Short__c</fullName>
        <label>Infer: Profiles (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Rating__c</fullName>
        <formula>TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/255),0,infer3__Score_Object_ID__r.infer3__Rating_0__c,1,infer3__Score_Object_ID__r.infer3__Rating_1__c,2,infer3__Score_Object_ID__r.infer3__Rating_2__c,3,infer3__Score_Object_ID__r.infer3__Rating_3__c,4,infer3__Score_Object_ID__r.infer3__Rating_4__c,5,infer3__Score_Object_ID__r.infer3__Rating_5__c,6,infer3__Score_Object_ID__r.infer3__Rating_6__c,null),1+MOD(infer3__Score_Index__c,255),1),&apos;^&apos;,&apos; &apos;))</formula>
        <label>Infer: Fit Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer3__Infer_Score__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/85),0,infer3__Score_Object_ID__r.infer3__Score_0__c,1,infer3__Score_Object_ID__r.infer3__Score_1__c,2,infer3__Score_Object_ID__r.infer3__Score_2__c,3,infer3__Score_Object_ID__r.infer3__Score_3__c,4,infer3__Score_Object_ID__r.infer3__Score_4__c,5,infer3__Score_Object_ID__r.infer3__Score_5__c,6,infer3__Score_Object_ID__r.infer3__Score_6__c,7,infer3__Score_Object_ID__r.infer3__Score_7__c,8,infer3__Score_Object_ID__r.infer3__Score_8__c,9,infer3__Score_Object_ID__r.infer3__Score_9__c,10,infer3__Score_Object_ID__r.infer3__Score_10__c,11,infer3__Score_Object_ID__r.infer3__Score_11__c,12,infer3__Score_Object_ID__r.infer3__Score_12__c,13,infer3__Score_Object_ID__r.infer3__Score_13__c,14,infer3__Score_Object_ID__r.infer3__Score_14__c,15,infer3__Score_Object_ID__r.infer3__Score_15__c,16,infer3__Score_Object_ID__r.infer3__Score_16__c,17,infer3__Score_Object_ID__r.infer3__Score_17__c,18,infer3__Score_Object_ID__r.infer3__Score_18__c,null),1+3*MOD(infer3__Score_Index__c,85),3),&apos;^&apos;,&apos; &apos;)))</formula>
        <label>Infer: Fit Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Index__c</fullName>
        <label>Infer Score Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Object_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score Object ID</label>
        <referenceTo>infer3__Score_Object__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact_Score_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer3__Score_Snapshot__c</fullName>
        <description>A saved copy of the score, if the &quot;Update Contact with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</description>
        <inlineHelpText>A saved copy of the score, if the &quot;Update Contact with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&apos;t track formula fields.</inlineHelpText>
        <label>Infer Score Snapshot NOT FOR LAYOUT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_city__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_5__c</formula>
        <label>Infer: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_company_size__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_1__c</formula>
        <label>Infer: Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_competitors__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_29__c</formula>
        <label>Infer: Competitors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_country__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_10__c</formula>
        <label>Infer: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_email_type__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_7__c</formula>
        <label>Infer: Email Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_eloqua__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_25__c</formula>
        <label>Infer: Has Eloqua</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_hubspot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_28__c</formula>
        <label>Infer: Has Hubspot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_marketo__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_26__c</formula>
        <label>Infer: Has Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_pardot__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_27__c</formula>
        <label>Infer: Has Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_has_ssl__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_18__c</formula>
        <label>Infer: Has SSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_3__c</formula>
        <label>Infer: Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_sector__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_4__c</formula>
        <label>Infer: Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_state__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_12__c</formula>
        <label>Infer: State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_uses_aws__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_19__c</formula>
        <label>Infer: Uses AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_website_rank__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_6__c</formula>
        <label>Infer: Website Rank</label>
        <type>Text</type>
    </fields>
</CustomObject>